Added a separate final results to render better

--- a/DataAnalysis_Final.ipynb
+++ b/DataAnalysis_Final.ipynb
@@ -16,7 +16,7 @@
     " \n",
     " Part Five: Validation \n",
     " \n",
-    " Part Six: Final Results\n",
+    " Part Six: Final Results (you can refer to a separate notebook \"Final Results\" if you prefer to skip all of the following)\n",
     " \n",
     " Appendix: Validation Code\n",
     " "
@@ -528,32 +528,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['index', 'product-name-slug', 'new-price', 'sales-volume',\n",
-       "       'release-year', 'genres', 'name', 'slug', 'rating', 'developers',\n",
-       "       ...\n",
-       "       'tag-classic', 'tag-Others', 'glove_name', 'glove_vectors',\n",
-       "       'tfidf_vectors', 'best-sellers-similarity-score', 'num_genres',\n",
-       "       'num_tags', 'num_devs', 'num_plats'],\n",
-       "      dtype='object', length=170)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
@@ -569,236 +543,6 @@
    "outputs": [],
    "source": [
     "df_touse = df_touse.drop(labels_delete,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>new-price</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>age</th>\n",
-       "      <th>genre-action</th>\n",
-       "      <th>genre-casual</th>\n",
-       "      <th>genre-family</th>\n",
-       "      <th>genre-sports</th>\n",
-       "      <th>genre-strategy</th>\n",
-       "      <th>genre-simulation</th>\n",
-       "      <th>genre-arcade</th>\n",
-       "      <th>...</th>\n",
-       "      <th>tag-classic</th>\n",
-       "      <th>tag-Others</th>\n",
-       "      <th>glove_name</th>\n",
-       "      <th>glove_vectors</th>\n",
-       "      <th>tfidf_vectors</th>\n",
-       "      <th>best-sellers-similarity-score</th>\n",
-       "      <th>num_genres</th>\n",
-       "      <th>num_tags</th>\n",
-       "      <th>num_devs</th>\n",
-       "      <th>num_plats</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.88</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>30 great games  family party</td>\n",
-       "      <td>[-0.011987873824790777, -0.010111511442660657,...</td>\n",
-       "      <td>[-0.011001022575790482, -0.009524451159250288,...</td>\n",
-       "      <td>0.051619</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12.43</td>\n",
-       "      <td>3.90</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>007  agent under fire</td>\n",
-       "      <td>[0.011887307694712433, 0.00121297548245673, 0....</td>\n",
-       "      <td>[0.011206702977183004, 0.0017279149162542512, ...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9.987066800602712</td>\n",
-       "      <td>4.42</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>007  everything or nothing</td>\n",
-       "      <td>[0.004725774025625378, 0.005010563115603424, 0...</td>\n",
-       "      <td>[0.004213719079930943, 0.004670850131650671, 0...</td>\n",
-       "      <td>0.035222</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8.94</td>\n",
-       "      <td>3.91</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>007  from russia with love</td>\n",
-       "      <td>[0.0049179336204960115, 0.0027296383807865355,...</td>\n",
-       "      <td>[0.004056095763977971, 0.0020000662557417836, ...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>38.1529028714891</td>\n",
-       "      <td>3.93</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>007  nightfire</td>\n",
-       "      <td>[0.006097841455231769, 0.004732288683837156, 0...</td>\n",
-       "      <td>[0.005381895551952365, 0.004194658129931138, 0...</td>\n",
-       "      <td>0.035557</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 159 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           new-price  rating   age  genre-action  genre-casual  genre-family  \\\n",
-       "0               7.88    0.00  11.0             0             0             0   \n",
-       "1              12.43    3.90  17.0             0             0             0   \n",
-       "2  9.987066800602712    4.42  15.0             0             0             0   \n",
-       "3               8.94    3.91  14.0             1             0             0   \n",
-       "4   38.1529028714891    3.93  16.0             1             0             0   \n",
-       "\n",
-       "   genre-sports  genre-strategy  genre-simulation  genre-arcade    ...      \\\n",
-       "0             0               0                 0             0    ...       \n",
-       "1             0               0                 0             0    ...       \n",
-       "2             0               0                 0             0    ...       \n",
-       "3             0               0                 0             0    ...       \n",
-       "4             0               0                 0             0    ...       \n",
-       "\n",
-       "   tag-classic  tag-Others                     glove_name  \\\n",
-       "0            0           1   30 great games  family party   \n",
-       "1            0           0          007  agent under fire   \n",
-       "2            0           1     007  everything or nothing   \n",
-       "3            0           0     007  from russia with love   \n",
-       "4            0           0                 007  nightfire   \n",
-       "\n",
-       "                                       glove_vectors  \\\n",
-       "0  [-0.011987873824790777, -0.010111511442660657,...   \n",
-       "1  [0.011887307694712433, 0.00121297548245673, 0....   \n",
-       "2  [0.004725774025625378, 0.005010563115603424, 0...   \n",
-       "3  [0.0049179336204960115, 0.0027296383807865355,...   \n",
-       "4  [0.006097841455231769, 0.004732288683837156, 0...   \n",
-       "\n",
-       "                                       tfidf_vectors  \\\n",
-       "0  [-0.011001022575790482, -0.009524451159250288,...   \n",
-       "1  [0.011206702977183004, 0.0017279149162542512, ...   \n",
-       "2  [0.004213719079930943, 0.004670850131650671, 0...   \n",
-       "3  [0.004056095763977971, 0.0020000662557417836, ...   \n",
-       "4  [0.005381895551952365, 0.004194658129931138, 0...   \n",
-       "\n",
-       "   best-sellers-similarity-score  num_genres  num_tags  num_devs  num_plats  \n",
-       "0                       0.051619           1         1         1          1  \n",
-       "1                       0.000000           1         2         2          3  \n",
-       "2                       0.035222           1         3         1          4  \n",
-       "3                       0.000000           1         2         2          4  \n",
-       "4                       0.035557           2         1         1          1  \n",
-       "\n",
-       "[5 rows x 159 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_touse.head(5)"
    ]
   },
   {
@@ -1565,222 +1309,6 @@
    "source": [
     "#replace the rating of nan with 0\n",
     "X_bb['rating']  = X_bb['rating'].fillna(0) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rating</th>\n",
-       "      <th>age</th>\n",
-       "      <th>genre-action</th>\n",
-       "      <th>genre-casual</th>\n",
-       "      <th>genre-family</th>\n",
-       "      <th>genre-sports</th>\n",
-       "      <th>genre-strategy</th>\n",
-       "      <th>genre-simulation</th>\n",
-       "      <th>genre-arcade</th>\n",
-       "      <th>genre-NA</th>\n",
-       "      <th>...</th>\n",
-       "      <th>tag-steam leaderboards</th>\n",
-       "      <th>tag-sci-fi</th>\n",
-       "      <th>tag-fantasy</th>\n",
-       "      <th>tag-classic</th>\n",
-       "      <th>tag-Others</th>\n",
-       "      <th>num_genres</th>\n",
-       "      <th>num_tags</th>\n",
-       "      <th>num_devs</th>\n",
-       "      <th>num_plats</th>\n",
-       "      <th>len_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.90</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.42</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.91</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3.93</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 155 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   rating   age  genre-action  genre-casual  genre-family  genre-sports  \\\n",
-       "0    0.00  11.0             0             0             0             0   \n",
-       "1    3.90  17.0             0             0             0             0   \n",
-       "2    4.42  15.0             0             0             0             0   \n",
-       "3    3.91  14.0             1             0             0             0   \n",
-       "4    3.93  16.0             1             0             0             0   \n",
-       "\n",
-       "   genre-strategy  genre-simulation  genre-arcade  genre-NA    ...     \\\n",
-       "0               0                 0             0         1    ...      \n",
-       "1               0                 0             0         1    ...      \n",
-       "2               0                 0             0         0    ...      \n",
-       "3               0                 0             0         0    ...      \n",
-       "4               0                 0             0         0    ...      \n",
-       "\n",
-       "   tag-steam leaderboards  tag-sci-fi  tag-fantasy  tag-classic  tag-Others  \\\n",
-       "0                       0           0            0            0           1   \n",
-       "1                       0           0            0            0           0   \n",
-       "2                       0           0            0            0           1   \n",
-       "3                       0           0            0            0           0   \n",
-       "4                       0           0            0            0           0   \n",
-       "\n",
-       "   num_genres  num_tags  num_devs  num_plats  len_name  \n",
-       "0           1         1         1          1         5  \n",
-       "1           1         2         2          3         3  \n",
-       "2           1         3         1          4         3  \n",
-       "3           1         2         2          4         3  \n",
-       "4           2         1         1          1         2  \n",
-       "\n",
-       "[5 rows x 155 columns]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_bb.head(5)"
    ]
   },
   {
@@ -3678,11 +3206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_obj(df_final_results,\"df_final_results\")"
+    "save_obj(df_final_results,\"df_final_results\")\n",
+    "save_obj(final_results_detail,\"final_results_detail\")"
    ]
   },
   {
@@ -4033,10 +3562,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
+    "save_obj(df_rf2,\"df_rf2\")\n",
+    "save_obj(selector_rf1_2,\"selector_rf1_2\")\n",
+    "save_obj(X_test_rf2,\"X_test_rf2\")\n",
     "df_toview = df_rf2[selector_rf1_2]"
    ]
   },
@@ -4223,7 +3755,7 @@
     "#saving the train,validation and test dataset:\n",
     "\n",
     "#save the mask for selecting train/val/test\n",
-    "save_obj(base_selector,\"base_selector\")\n"
+    "save_obj(base_selector,\"base_selector\")"
    ]
   },
   {
